[gd_scene load_steps=4 format=3 uid="uid://cdk7yi2bodgc2"]

[ext_resource type="Script" path="res://profile/profile.gd" id="1_yq4dt"]
[ext_resource type="FontFile" uid="uid://cfku5f1y213fl" path="res://res/font/EvilEmpire-4BBVK.ttf" id="3_7c3gh"]
[ext_resource type="FontFile" uid="uid://trhnjtln4rdp" path="res://res/font/Valorax-lg25V.otf" id="3_12jwx"]

[node name="profile" type="Node2D"]
script = ExtResource("1_yq4dt")

[node name="color_bg" type="ColorRect" parent="."]
show_behind_parent = true
offset_left = -19.0
offset_top = -17.0
offset_right = 745.0
offset_bottom = 1319.0
color = Color(0.0745098, 0.2, 0.298039, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 17.0
offset_top = 803.0
offset_right = 139.0
offset_bottom = 829.0
theme_override_colors/default_color = Color(0.141176, 0.215686, 0.388235, 1)
text = "Now: profile"

[node name="Button_back" type="Button" parent="."]
offset_left = 59.0
offset_top = 45.0
offset_right = 167.0
offset_bottom = 103.0
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="Button_back"]
layout_mode = 0
offset_left = 8.0
offset_top = 10.0
offset_right = 98.0
offset_bottom = 50.0
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_7c3gh")
theme_override_font_sizes/normal_font_size = 26
text = "<- back"

[node name="ColorRect" type="ColorRect" parent="Button_back"]
show_behind_parent = true
layout_mode = 0
offset_right = 108.0
offset_bottom = 58.0
mouse_filter = 2
color = Color(0.992157, 0.372549, 0, 1)

[node name="Attempts" type="ColorRect" parent="."]
offset_left = 152.0
offset_top = 444.0
offset_right = 586.0
offset_bottom = 518.0
color = Color(0.964706, 0.964706, 0.913725, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Attempts"]
layout_mode = 0
offset_left = 20.0
offset_top = 12.0
offset_right = 385.0
offset_bottom = 69.0
theme_override_colors/default_color = Color(0.0745098, 0.2, 0.298039, 1)
theme_override_fonts/normal_font = ExtResource("3_12jwx")
theme_override_font_sizes/normal_font_size = 45
text = "Attempts :"

[node name="hint_status" type="ColorRect" parent="."]
offset_left = 160.0
offset_top = 653.0
offset_right = 594.0
offset_bottom = 727.0
color = Color(0.964706, 0.964706, 0.913725, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="hint_status"]
offset_left = 20.0
offset_top = 12.0
offset_right = 385.0
offset_bottom = 69.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_12jwx")
theme_override_font_sizes/normal_font_size = 45
text = "Attempts :"

[connection signal="pressed" from="Button_back" to="." method="_on_button_back_pressed"]
